tests/fixtures/invalid/round_int_str.py
# Cannot call round() with Int, Str
x = round(1, "hello")
